# Neighborly

./: .gitflow-config  .gitignore  CLAUDE.md  CONTRIBUTING.md  Directory.Build.props  DiskBackedList.cs  GEMINI.md  LICENSE.txt  Neighborly.sln  PULL_REQUEST_TEMPLATE.md  README.md  VectorDatabaseTests.cs  concurrency_explained.md  etl_explained.md  files.txt  indexing_explained.md  logging_explained.md  roadmap.md  setup-dev.ps1  tagging_explained.md  testEnvironments.json  vector_storage_explained.md
.github/: dependabot.yml
API.gRPC/: API.csproj  Dockerfile  GEMINI.md  LoggerExtensions.cs  Program.cs  README.md  Utility.cs
Adapters.SemanticKernel/: GEMINI.md  Neighborly.Adapters.SemanticKernel.csproj  NeighborlyMemoryStore.cs
Benchmarks/: BatchDistanceCalculationBenchmarks.cs  Benchmarks.csproj  CacheOptimizationBenchmarks.cs  GEMINI.md  Program.cs
Docs/: 01-getting-started.md  02-architecture.md  03-search-algorithms.md  04-data-operations.md  05-api-reference.md  06-examples.md  07-deployment.md  08-troubleshooting.md  09-contributing.md  README.md
Neighborly/: CacheOptimizedVector.cs  CacheOptimizedVectorPool.cs  CorruptionDetector.cs  DiskBackedList.cs  DurabilityManager.cs  EmbeddingFactory.cs  EmbeddingGenerator.cs  FPZip.cs  FileFormatVersion.cs  FpZipCompression.cs  (+29 more)
Neighborly.Python/: GEMINI.md  MANIFEST.in  Neighborly.Python.pyproj  README.md  build_package.py  pyproject.toml  setup.cfg  setup.py
Neighborly.Python/src/neighborly/: __init__.py  database.py
Neighborly.Python/src/neighborly_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+145 files in other folders)
