[metadata]
name = neighborly-python
description = Neighborly Vector Data Access Library for Python
author = KNN Labs
author_email = nick@knnlabs.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nickna/neighborly
project_urls =
    Bug Tracker = https://github.com/nickna/neighborly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pythonnet

[options.packages.find]
where = src
